--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,85 +1,25 @@
-- name: Install Android SDK for Buildozer and accept licenses
+name: Build APK
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    container:
+      [span_5](start_span)[span_6](start_span)image: kivy/buildozer:latest # 모든 SDK/NDK가 포함된 이미지[span_5](end_span)[span_6](end_span)
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build APK (debug)
         run: |
-          set -euo pipefail
-          set -x
+          # [span_7](start_span)Cython 및 PATH 설정이 이미지 내에 완료되어 있음[span_7](end_span)
+          buildozer -v android debug
 
-          # compute paths at runtime using RUNNER_TEMP (provided by Actions)
-          TARGET_SDK_ROOT="${RUNNER_TEMP}/android-sdk"
-          BOOZ_SDK_ROOT="${HOME}/.buildozer/android/platform/android-sdk"
-          JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
-
-          echo "TARGET_SDK_ROOT=${TARGET_SDK_ROOT}"
-          echo "BOOZ_SDK_ROOT=${BOOZ_SDK_ROOT}"
-
-          mkdir -p "${TARGET_SDK_ROOT}/cmdline-tools"
-          mkdir -p "${BOOZ_SDK_ROOT}"
-          cd /tmp
-
-          # try to auto-detect commandlinetools download URL
-          TOOL_URL=$(curl -sL https://developer.android.com/studio | \
-            grep -oE 'https://dl.google.com/android/repository/commandlinetools-linux-[0-9_]+_latest.zip' | head -n1 || true)
-
-          if [ -z "${TOOL_URL}" ]; then
-            echo "Auto-detect failed — using fallback URLs"
-            FALLBACKS=(
-              "https://dl.google.com/android/repository/commandlinetools-linux-14742923_latest.zip"
-              "https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip"
-              "https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip"
-            )
-            for u in "${FALLBACKS[@]}"; do
-              echo "Checking $u"
-              if wget -q --spider "$u"; then
-                TOOL_URL="$u"
-                break
-              fi
-            done
-          fi
-
-          if [ -z "${TOOL_URL}" ]; then
-            echo "ERROR: couldn't find a commandlinetools download URL automatically."
-            exit 1
-          fi
-
-          echo "Downloading command line tools from: ${TOOL_URL}"
-          wget -q "${TOOL_URL}" -O cmdline-tools.zip || { echo "wget failed"; ls -l cmdline-tools.zip || true; exit 1; }
-
-          # validate zip
-          if ! unzip -tq cmdline-tools.zip >/dev/null 2>&1; then
-            echo "Downloaded file is NOT a valid zip. Dump first 200 bytes for debugging:"
-            hexdump -C cmdline-tools.zip | head -n 40 || true
-            head -n 200 cmdline-tools.zip || true
-            exit 1
-          fi
-
-          unzip -q cmdline-tools.zip -d "${TARGET_SDK_ROOT}/cmdline-tools"
-
-          # normalize structure so sdkmanager is at cmdline-tools/latest/bin
-          if [ -d "${TARGET_SDK_ROOT}/cmdline-tools/cmdline-tools" ]; then
-            mkdir -p "${TARGET_SDK_ROOT}/cmdline-tools/latest"
-            mv "${TARGET_SDK_ROOT}/cmdline-tools/cmdline-tools/"* "${TARGET_SDK_ROOT}/cmdline-tools/latest/"
-          elif [ -d "${TARGET_SDK_ROOT}/cmdline-tools/tools" ]; then
-            mkdir -p "${TARGET_SDK_ROOT}/cmdline-tools/latest"
-            mv "${TARGET_SDK_ROOT}/cmdline-tools/tools/"* "${TARGET_SDK_ROOT}/cmdline-tools/latest/"
-          fi
-
-          SDKMAN="${TARGET_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager"
-          chmod +x "${SDKMAN}"
-
-          export PATH="${TARGET_SDK_ROOT}/cmdline-tools/latest/bin:$PATH"
-
-          echo "Accepting SDK licenses (for TARGET_SDK_ROOT)..."
-          yes | "${SDKMAN}" --sdk_root="${TARGET_SDK_ROOT}" --licenses
-
-          echo "Installing platform-tools, platforms;android-31, build-tools;36.1.0 into TARGET_SDK_ROOT..."
-          "${SDKMAN}" --sdk_root="${TARGET_SDK_ROOT}" --install "platform-tools" "platforms;android-31" "build-tools;36.1.0" --verbose
-
-          echo "Copying SDK into Buildozer expected path: ${BOOZ_SDK_ROOT}"
-          rsync -a "${TARGET_SDK_ROOT}/" "${BOOZ_SDK_ROOT}/"
-
-          # export environment for later steps
-          echo "ANDROID_SDK_ROOT=${BOOZ_SDK_ROOT}" >> $GITHUB_ENV
-          echo "PATH=${BOOZ_SDK_ROOT}/cmdline-tools/latest/bin:${BOOZ_SDK_ROOT}/platform-tools:$PATH" >> $GITHUB_ENV
-
-          echo "Done installing SDK. Listing ${BOOZ_SDK_ROOT}:"
-          ls -la "${BOOZ_SDK_ROOT}" || true
-          ls -la "${BOOZ_SDK_ROOT}/build-tools" || true
+      - name: Upload APK
+        [span_8](start_span)uses: actions/upload-artifact@v4 # v3 대신 v4 사용 권장[span_8](end_span)
+        with:
+          name: apk
+          path: bin/*.apk
