--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Build APK (Performance Optimized)
 
 on:
   push:
@@ -12,6 +12,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      # 1. 가상 머신 다이어트 (빌드 공간 확보 및 성능 향상)
+      - name: Free Disk Space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo apt-get clean
+
+      # 2. 가상 메모리(Swap) 추가 (NDK 압축 해제 시 튕김 방지)
+      - name: Setup Swap
+        run: |
+          sudo fallocate -l 4G /swapfile
+          sudo chmod 600 /swapfile
+          sudo mkswap /swapfile
+          sudo swapon /swapfile
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -34,45 +51,39 @@ jobs:
           python3 -m pip install buildozer cython==0.29.33
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      # [핵심] 빌드 속도 향상 및 중단 방지를 위한 캐시 설정
-      - name: Cache Buildozer Data
+      # 3. 캐시 설정 (성공 시 다음 빌드 속도 10배 향상)
+      - name: Cache Buildozer
         uses: actions/cache@v3
         with:
           path: |
             ~/.buildozer
             .buildozer
-          key: ${{ runner.os }}-buildozer-v2-${{ hashFiles('buildozer.spec') }}
-          restore-keys: |
-            ${{ runner.os }}-buildozer-v2-
+          key: ${{ runner.os }}-buildozer-v3-${{ hashFiles('buildozer.spec') }}
 
       - name: Configure buildozer.spec
         run: |
           if [ ! -f buildozer.spec ]; then
             buildozer init
           fi
-          # 라이선스 자동 승인 강제 설정
+          # 라이선스 및 필수 설정 자동 수정
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
-          # 앱에 필요한 라이브러리 (필요시 수정 가능)
           sed -i 's/^requirements =.*/requirements = python3,kivy,requests,certifi/' buildozer.spec
-          # 권한 설정
           sed -i 's/^[# ]*android.permissions =.*/android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE/' buildozer.spec
-          # 안정적인 버전을 위해 API와 NDK 버전 고정
           sed -i 's/^[# ]*android.api =.*/android.api = 33/' buildozer.spec
           sed -i 's/^[# ]*android.ndk =.*/android.ndk = 25b/' buildozer.spec
 
       - name: Pre-accept SDK Licenses
         run: |
-          # 라이선스 질문 창이 뜨지 않도록 미리 파일 생성
           mkdir -p ~/.buildozer/android/platform/android-sdk/licenses
           echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55\nd56263434d92419a93602ee9f458440c3091b291\n24333f8a63b6825ea9d5513f8e074e7540a1d006" > ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-license
 
       - name: Build APK
         run: |
-          # 빌드 프로세스가 대화창 없이 진행되도록 'yes' 파이프 연결
-          yes | buildozer -v android debug
+          # yes 파이프라인 대신 --auto-accept-sdk-license 옵션이 있다면 좋으나, 
+          # 안정성을 위해 기존 yes 방식을 유지하되 버퍼 문제를 위해 y 문자만 전달
+          yes y | buildozer -v android debug
         env:
           APP_ANDROID_ACCEPT_SDK_LICENSE: "1"
-          # 메모리 부족으로 인한 튕김 방지
           GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs='-Xmx2048m'"
 
       - name: Upload APK
