--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK (Ultimate Fix)
+name: Build APK (Ultimate Performance Mode)
 
 on:
   push:
@@ -8,30 +8,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # 전체 빌드 제한 시간을 넉넉히 1시간으로 설정
+    timeout-minutes: 60
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 1. 가상 머신 디스크 공간 최대 확보 (가장 확실한 방법)
+      # 1. 디스크 용량 확보 (약 30GB 이상 확보)
       - name: Free Disk Space
         run: |
           sudo docker image prune -a -f
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-          df -h # 남은 용량 확인
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
+          df -h
 
-      # 2. 가상 메모리(Swap) 설정 (dd 방식으로 변경하여 'Text file busy' 에러 해결)
+      # 2. Swap 에러 해결 (Text file busy 방지)
       - name: Setup Swap
         run: |
           sudo swapoff -a || true
           sudo rm -f /swapfile
+          # dd를 사용하여 안정적으로 4GB 가상 메모리 생성
           sudo dd if=/dev/zero of=/swapfile bs=1M count=4096
           sudo chmod 600 /swapfile
           sudo mkswap /swapfile
           sudo swapon /swapfile
-          free -h # 메모리 확인
+          free -h
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -54,21 +55,24 @@ jobs:
           python3 -m pip install buildozer cython==0.29.33
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+      # 3. [핵심] 캐싱 설정 (이미 성공한 부분은 건너뜀)
+      - name: Cache Buildozer
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.buildozer
+            .buildozer
+          key: ${{ runner.os }}-buildozer-v4-${{ hashFiles('buildozer.spec') }}
+
       - name: Configure buildozer.spec
         run: |
           if [ ! -f buildozer.spec ]; then
             buildozer init
           fi
-          # 라이선스 및 필수 설정 자동 수정
+          # 라이선스 및 필수 설정 강제 업데이트
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
-          
-          # [요청사항 반영] requirements 자동 설정 (사용자 라이브러리 포함)
           sed -i 's/^requirements =.*/requirements = python3,kivy,requests,certifi/' buildozer.spec
-          
-          # [요청사항 반영] permissions 자동 설정
           sed -i 's/^[# ]*android.permissions =.*/android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE/' buildozer.spec
-          
-          # API 및 NDK 버전 고정 (안정성)
           sed -i 's/^[# ]*android.api =.*/android.api = 33/' buildozer.spec
           sed -i 's/^[# ]*android.ndk =.*/android.ndk = 25b/' buildozer.spec
 
@@ -77,15 +81,14 @@ jobs:
           mkdir -p ~/.buildozer/android/platform/android-sdk/licenses
           echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55\nd56263434d92419a93602ee9f458440c3091b291\n24333f8a63b6825ea9d5513f8e074e7540a1d006" > ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-license
 
+      # 4. 빌드 실행 (clean 절대 하지 마세요!)
       - name: Build APK
         run: |
-          # 빌드 시작 전 불필요한 캐시 삭제로 공간 확보
-          buildozer android clean
-          # yes를 사용하여 모든 질문에 자동 응답
+          # clean을 빼고 바로 빌드하여 리소스를 아낍니다.
           yes y | buildozer -v android debug
         env:
           APP_ANDROID_ACCEPT_SDK_LICENSE: "1"
-          GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs='-Xmx2048m'"
+          GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs='-Xmx3072m'"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
