--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK (Fixed Syntax)
+name: Build APK (SDK Manual Fix)
 
 on:
   push:
@@ -12,16 +12,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Free Disk Space
+      - name: Free Disk Space & Setup Swap
         run: |
-          sudo docker image prune -a -f
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-          sudo apt-get clean
-
-      - name: Setup Swap
-        run: |
           sudo swapoff -a || true
-          sudo rm -f /swapfile
           sudo dd if=/dev/zero of=/swapfile bs=1M count=4096
           sudo chmod 600 /swapfile
           sudo mkswap /swapfile
@@ -32,7 +26,7 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install System Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential git python3-dev libsdl2-dev libsdl2-image-dev \
@@ -47,25 +41,18 @@ jobs:
           python3 -m pip install buildozer cython==0.29.33
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Cache Buildozer Data
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.buildozer
-            .buildozer
-          key: ${{ runner.os }}-buildozer-v3-${{ hashFiles('buildozer.spec') }}
-          restore-keys: |
-            ${{ runner.os }}-buildozer-v3-
-
-      - name: Configure buildozer.spec
+      # [핵심: 이전에 시도하지 않은 방법] SDK Command-line Tools 수동 설치
+      - name: Manual SDK Tools Setup
         run: |
-          if [ ! -f buildozer.spec ]; then buildozer init; fi
-          sed -i 's/^[# ]*android.api =.*/android.api = 33/' buildozer.spec
-          sed -i 's/^[# ]*android.ndk =.*/android.ndk = 25b/' buildozer.spec
-          sed -i 's/^[# ]*android.minapi =.*/android.minapi = 21/' buildozer.spec
-          sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
-          sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
-          sed -i 's/^requirements =.*/requirements = python3,kivy,requests,certifi/' buildozer.spec
+          mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
+          cd ~/.buildozer/android/platform/android-sdk/cmdline-tools
+          # 최신 커맨드라인 툴 다운로드 (버전은 고정)
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip commandlinetools-linux-9477386_latest.zip
+          mv cmdline-tools latest
+          # Buildozer가 찾는 구형 경로(tools)에 대한 심볼릭 링크 생성
+          mkdir -p ../tools/bin
+          ln -s $(pwd)/latest/bin/sdkmanager ../tools/bin/sdkmanager
 
       - name: Pre-accept SDK Licenses
         run: |
@@ -78,7 +65,8 @@ jobs:
           APP_ANDROID_ACCEPT_SDK_LICENSE: "1"
           GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs='-Xmx2048m'"
         run: |
-          yes y | buildozer -v android debug
+          # SDK 수동 설정 후 빌드 실행
+          buildozer -v android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
